Another minor cleanup.. Additional cleaned empty try/catch blocks.
git-svn-id: http://svn.l2jserver.com/trunk@2652 d34dfa0f-f91c-0410-86dd-cf06f19dd0ad