@@ -87,7 +87,7 @@ public class LevelUpData
 				lvlDat.setClassMpAdd(rset.getFloat(MP_ADD));
 				lvlDat.setClassMpModifier(rset.getFloat(MP_MOD));
 				
-				_lvlTable.put(new Integer(lvlDat.getClassid()), lvlDat);
+				_lvlTable.put(Integer.valueOf(lvlDat.getClassid()), lvlDat);
 			}
 			
 			rset.close();
